--- a/eb-flask/requirements.txt
+++ b/eb-flask/requirements.txt
@@ -1,6 +1,7 @@
 blinker==1.9.0
 boto3==1.37.8
 botocore==1.37.8
+cached-property==2.0.1
 click==8.1.8
 Flask==3.1.0
 itsdangerous==2.2.0
@@ -13,3 +14,4 @@ s3transfer==0.11.4
 six==1.17.0
 urllib3==2.3.0
 Werkzeug==3.1.3
+Whoosh-Reloaded==2.7.5
