--- a/eb-flask/requirements.txt
+++ b/eb-flask/requirements.txt
@@ -63,6 +63,9 @@ opentelemetry-util-http==0.51b0
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
+pinecone==6.0.2
+pinecone-plugin-assistant==1.3.0
+pinecone-plugin-interface==0.0.7
 posthog==3.19.1
 protobuf==5.29.3
 psycopg2-binary==2.9.10
